Initial commit: 你画我猜游戏

--- a/部署指南.md
+++ b/部署指南.md
@@ -16,7 +16,7 @@
    git add .
    git commit -m "Initial commit: 你画我猜游戏"
    # 在GitHub创建新仓库后
-   git remote add origin https://github.com/你的用户名/draw-something.git
+   git remote add origin https://github.com/K1N2I3/Draw-Something.git
    git push -u origin main
    ```
 
